# hcRNG

./: CMakeLists.txt  README.md  build.sh  clean.sh  hipifyRAND  install.sh  uninstall.sh
cmake/: FindHC++.cmake
docs/: make.bat
examples/: CMakeLists.txt  Host_only.cpp  a.out  (+5 more)
lib/src/: CMakeLists.txt
lib/src/generators/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/src/generators/Getpath/: Makefile  cmake_install.cmake  hcRNG.cpp
lib/src/generators/boxmuller/: Makefile  box_muller_transform.cpp  cmake_install.cmake
lib/src/generators/lfsr113/: lfsr113.cpp
lib/src/generators/mrg31k3p/: mrg31k3p.cpp
lib/src/generators/mrg32k3a/: .mrg32k3a.cpp.swp  mrg32k3a.cpp
lib/src/generators/mtgp32/: CMakeLists.txt  mtgp32-param-fast.cpp  mtgp32.cpp
lib/src/generators/philox432/: philox432.cpp
lib/src/generators/xorwow/: CMakeLists.txt  xorwow.cpp
lib/src/hcc_detail/: hip_rng_kernel.cpp  hiprng.cpp
lib/src/include/hcRNG/: hcRNG.h  hcRNG_template.h  lfsr113.h  mrg31k3p.h  mrg32k3a.h  philox432.h
lib/src/include/hcRNG/private/: lfsr113.c.h  modular.c.h  mrg31k3p.c.h  mrg32k3a.c.h  philox432.c.h
lib/src/include/hcRNG/private/Random123/: philox.h
lib/src/nvcc_detail/: hiprng.cpp  hiprng_kernel.cpp
test/: CMakeLists.txt  test.sh
test/HIP_Unit_Tests/: CMakeLists.txt
test/HIP_Unit_Tests/common/: CMakeLists.txt  lfsrGenerate.cpp  mrg31k3pGenerate.cpp  mrg32k3aGenerate.cpp  philox432Generate.cpp
test/HIP_Unit_Tests/normal/: CMakeLists.txt  lfsr113Double_test_normal.cpp  lfsr113Single_test_normal.cpp  mrg31k3pDouble_test_normal.cpp  mrg31k3pSingle_test_normal.cpp  mrg32k3aDouble_test_normal.cpp  mrg32k3aSingle_test_normal.cpp  philox432Double_test_normal.cpp  philox432Single_test_normal.cpp
test/HIP_Unit_Tests/uniform/: CMakeLists.txt  lfsr113Double_test_uniform.cpp  lfsr113Single_test_uniform.cpp  mrg31k3pDouble_test_uniform.cpp  mrg31k3pSingle_test_uniform.cpp  mrg32k3aDouble_test_uniform.cpp  mrg32k3aSingle_test_uniform.cpp  philox432Double_test_uniform.cpp  philox432Single_test_uniform.cpp
test/example/: CMakeLists.txt  Host_only.cpp  Multistream.cpp  Multistream_normal.cpp  Multistream_uniform.cpp  Randomarray.cpp  Randomarray_normal.cpp  Randomarray_uniform.cpp
test/hiprng_test/uniform/: UniformMrg32k3a.cpp  a.out
test/src/: CMakeLists.txt  lfsr113Double_test.cpp  lfsr113Single_test.cpp  lfsr113_test.cpp  mrg31k3pDouble_test.cpp  mrg31k3pSingle_test.cpp  mrg31k3p_test.cpp  mrg32k3aDouble_test.cpp  mrg32k3aSingle_test.cpp  mrg32k3a_test.cpp  philox432Double_test.cpp  philox432Single_test.cpp
test/src/example/: CMakeLists.txt  Randomarray.cpp
test/unit/: CMakeLists.txt  hcrng_Randomarray_double.cpp  hcrng_Randomarray_double_normal.cpp  hcrng_Randomarray_double_uniform.cpp  hcrng_Randomarray_single.cpp  hcrng_Randomarray_single_normal.cpp  hcrng_Randomarray_single_uniform.cpp  lfsr113Double_test.cpp  lfsr113Double_test_normal.cpp  lfsr113Double_test_uniform.cpp  lfsr113Single_test.cpp  lfsr113Single_test_normal.cpp  lfsr113Single_test_uniform.cpp  mrg31k3pDouble_test.cpp  mrg31k3pDouble_test_normal.cpp  mrg31k3pDouble_test_uniform.cpp  mrg31k3pSingle_test.cpp  mrg31k3pSingle_test_normal.cpp  mrg31k3pSingle_test_uniform.cpp  mrg32k3aDouble_test.cpp  mrg32k3aDouble_test_normal.cpp  mrg32k3aDouble_test_uniform.cpp  mrg32k3aSingle_test.cpp  mrg32k3aSingle_test_normal.cpp  mrg32k3aSingle_test_uniform.cpp  philox432Double_test.cpp  philox432Double_test_normal.cpp  philox432Double_test_uniform.cpp  philox432Single_test.cpp  philox432Single_test_normal.cpp  philox432Single_test_uniform.cpp
test/unit-api/: CMakeLists.txt  hcrng_HelperFunctions.cpp  hcrng_Randomarray_double_normal.cpp  hcrng_Randomarray_double_uniform.cpp  hcrng_Randomarray_single_normal.cpp  hcrng_Randomarray_single_uniform.cpp  hcrng_StreamCreator.cpp  hcrng_Streams.cpp  hcrng_Substreams.cpp  lfsr113Double_test_normal.cpp  lfsr113Double_test_uniform.cpp  lfsr113Single_test_normal.cpp  lfsr113Single_test_uniform.cpp  mrg31k3pDouble_test_normal.cpp  mrg31k3pDouble_test_uniform.cpp  mrg31k3pSingle_test_normal.cpp  mrg31k3pSingle_test_uniform.cpp  mrg32k3aDouble_test_normal.cpp  mrg32k3aDouble_test_uniform.cpp  mrg32k3aSingle_test_normal.cpp  mrg32k3aSingle_test_uniform.cpp  philox432Double_test_normal.cpp  philox432Double_test_uniform.cpp  philox432Single_test_normal.cpp  philox432Single_test_uniform.cpp
test/unit-hip/: CMakeLists.txt  test.sh
test/unit-hip/common/: CMakeLists.txt  helperFuntions.cpp  lfsrGenerate.cpp  mrg31k3pGenerate.cpp  mrg32k3aGenerate.cpp  philox432Generate.cpp  xorwowGenerate.cpp
test/unit-hip/device/: CMakeLists.txt  device_test.sh
test/unit-hip/device/device_normal/: CMakeLists.txt  mrg32k3aSingle_test_device_normal.cpp  philox432Single_test_device_normal.cpp  xorwowSingle_test_device_normal.cpp
test/unit-hip/device/device_uniform/: CMakeLists.txt  mrg32k3aSingle_test_device_uniform.cpp  philox432Single_test_device_uniform.cpp  xorwowSingle_test_device_uniform.cpp
test/unit-hip/normal/: CMakeLists.txt  lfsr113Double_test_normal.cpp  lfsr113Single_test_normal.cpp  mrg31k3pDouble_test_normal.cpp  mrg31k3pSingle_test_normal.cpp  mrg32k3aDouble_test_normal.cpp  mrg32k3aSingle_test_normal.cpp  philox432Double_test_normal.cpp  philox432Single_test_normal.cpp  xorwowSingle_test_normal.cpp
test/unit-hip/uniform/: CMakeLists.txt  lfsr113Double_test_uniform.cpp  lfsr113Single_test_uniform.cpp  mrg31k3pDouble_test_uniform.cpp  mrg31k3pSingle_test_uniform.cpp  mrg32k3aDouble_test_uniform.cpp  mrg32k3aSingle_test_uniform.cpp  philox432Double_test_uniform.cpp  philox432Single_test_uniform.cpp  xorwowSingle_test_uniform.cpp
test/unit/hcrng_CreateStreams/: CMakeLists.txt  hcrng_CreateStreams.cpp
test/unit/hcrng_DestroyStreamCreator/: CMakeLists.txt  hcrng_DestroyStreamCreator.cpp
test/unit/hcrng_Randomarray/: CMakeLists.txt  hcrng_Randomarray_double.cpp
test/unit/hcrng_StreamCreator/: CMakeLists.txt  hcrng_StreamCreator.cpp
test/unit/hcrng_Streams/: CMakeLists.txt  hcrng_Streams.cpp
test/unit/hcrng_Substreams/: CMakeLists.txt  hcrng_Substreams.cpp
(+51 files in other folders)
