CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# HIP_PATH
IF(NOT DEFINED $ENV{HIP_PATH})
  SET(HIP_PATH "/opt/rocm/hip")
ELSE()
  SET(HIP_PATH $ENV{HIP_PATH})
ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake  "${HIP_PATH}/cmake")
EXECUTE_PROCESS(COMMAND ${HIP_PATH}/bin/hipconfig -P OUTPUT_VARIABLE PLATFORM)

ADD_SUBDIRECTORY(lib/src)

# Get the current working branch
EXECUTE_PROCESS(
  COMMAND git rev-parse --abbrev-ref HEAD
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  OUTPUT_VARIABLE GIT_BRANCH
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

# Get the latest abbreviated commit hash of the working branch
EXECUTE_PROCESS(
  COMMAND git log -1 --format=%h
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  OUTPUT_VARIABLE GIT_COMMIT_HASH
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

# Set default debian in stall path
SET(CMAKE_INSTALL_PREFIX "/opt/rocm/hcrng" CACHE STRING "Install location.")
SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/rocm/hcrng" CACHE STRING "Package install location.")

IF (${PLATFORM} MATCHES "hcc")
  SET(CPACK_PACKAGE_NAME "hcrng")
  SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "HcRNG: an implementation of uniform random number generators targetting the AMD heterogenous hardware via HCC compiler runtime")
ELSEIF (${PLATFORM} MATCHES "nvcc")
  SET(CPACK_PACKAGE_NAME "hiprng")
  SET(CPACK_DEBIAN_PACKAGE_DESCRIPTION "HipRNG: an RNG Library interface that links against curand library")
ENDIF()

SET(CPACK_PACKAGE_VENDOR "MulticoreWare, Inc")
SET(CPACK_GENERATOR "DEB;TGZ" CACHE STRING "Packages generated.")
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_BINARY_DEB "ON")
SET(CPACK_BINARY_STGZ "OFF")
SET(CPACK_SOURCE_TGZ "OFF")
SET(CPACK_SOURCE_TZ "OFF")
SET(CPACK_SOURCE_TBZ2 "OFF")
SET(CPACK_BINARY_TZ "OFF")
SET(CPACK_PACKAGE_NAME "hcrng")
SET(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${GIT_BRANCH}-${GIT_COMMIT_HASH}-${CMAKE_SYSTEM_NAME})
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Neelakandan <neelakandan@multicorewareinc.com>") #required

# Debian specific flags
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
  "${CMAKE_SOURCE_DIR}/packaging/debian/postinst;${CMAKE_SOURCE_DIR}/packaging/debian/prerm")

# RPM specific flags
SET(CPACK_RPM_PRE_INSTALL_SCRIPT_FILE "${CMAKE_SOURCE_DIR}/packaging/rpm/post")
SET(CPACK_RPM_POST_UNINSTALL_SCRIPT_FILE "${CMAKE_SOURCE_DIR}/packaging/rpm/postun")
 
INCLUDE(CPack)
