ADD_SUBDIRECTORY(Getpath)
ADD_SUBDIRECTORY(mrg31k3p)
ADD_SUBDIRECTORY(mtgp32)
ADD_SUBDIRECTORY(mrg32k3a)
ADD_SUBDIRECTORY(lfsr113)
ADD_SUBDIRECTORY(philox432)
ADD_SUBDIRECTORY(boxmuller)
ADD_SUBDIRECTORY(xorwow)
SET(RNGSRC ${GETPATHSRC} ${MRG31K3PSRC} ${MRG32K3ASRC} ${LFSR113SRC} ${PHILOX432SRC} ${BOXMULLERSRC} ${MTGP32SRC} ${XORWOWSRC} PARENT_SCOPE)
